4.0.0 BETA
DROP SUPPORT FOR OLD JAVA AND MC VERSIONS
ItsMyConfig now requires Java 17 and Spigot/Paper 1.16.5+

This version has very high performance optimizations and is way faster than current release 3.2.2 by probably double.

NOTE: This version is not stable yet. but feel free to report bugs.